[tool.poetry]
name = "pytwall"
version = "0.1.0"
description = ""
authors = ["Lucas Zacchi <zacchilucasm@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastf1 = "^2.3.0"
seaborn = "^0.12.1"
requests = "^2.28.1"
types-requests = "^2.28.11"
fastapi = {extras = ["all"], version = "^0.88.0"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.991"
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
